--- a/style/media.css
+++ b/style/media.css
@@ -1,23 +1,21 @@
-@media screen and (max-width: 992px) {
+.container {
+    max-width: 1046px;
+    padding: 0 25px;
+    margin: 0 auto;
+    box-sizing: content-box;
+}
+
+
+@media (max-width: 414px) {
     .nav--one {
         padding-left: 220px;
     }
-}
-@media screen and (max-width: 400px) {
-    .nav--one {
-        padding-left: 100px;
-    }
     .btn {
-       display: none;
-    }
-}
-
-@media screen and (max-width: 768px) {
-
-}
-
-@media (max-width: 479px) {
-    .btn {
+        width: 238px;
+        height: 66px;
+        background: #27D1CE;
+        border-radius: 6px;
+        border: none;
         display: none;
     }
 }
