--- a/style/style.css
+++ b/style/style.css
@@ -40,14 +40,11 @@ a:hover {
     flex-direction: column;
 }
 .container {
-    max-width: 1046px;
+    max-width: 80%;
     margin: 0 auto;
-    padding: 0 20px;
     box-sizing: content-box;
 }
-
 /*----header-------------------------------------------------------------------------*/
-
 #header {
     position: absolute;
     width: 100%;
