--- a/style/about.css
+++ b/style/about.css
@@ -28,9 +28,11 @@ body {
     font-family: RoadRadio ;
     src: url("../fonts/roadradio_bold.otf");
 }
-li{
+
+li {
     list-style-type: upper-alpha;
 }
+
 a {
     text-decoration: none;
 }
@@ -43,8 +45,7 @@ a {
 }
 
 .container {
-    max-width: 1046px;
-    padding: 0 25px;
+    max-width: 80%;
     margin: 0 auto;
     box-sizing: content-box;
 }
@@ -58,18 +59,25 @@ a {
     z-index: 50;
     padding-top: 20px;
 }
+
 .nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 .nav--one {
-    padding-left: 300px;
+    /*padding-left: 300px;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 .page {
     display: flex;
     align-items: center;
 }
+
 .page .pro {
     font-family: Gilroy, sans-serif;
     font-style: normal;
@@ -78,21 +86,28 @@ a {
     line-height: 16px;
     color: #FFFFFF;
 }
+
 .page .link {
     width: 6px;
     height: 6px;
     background: #27D1CE;
     box-shadow: 0 0 4px rgba(39, 209, 206, 0.5);
     border-radius: 50%;
-    margin: 0 10px 0 0;
+    margin: -13px 10px 0 0;
 }
+.code{
+    margin: 0 80px 0 0;
+}
+
 .page__one {
-    margin: 3px 0 0 0;
+    margin: -10px 0 0 0;
 }
+
 .page__one .fa-phone {
     margin: 0 9px 0 0;
     color: #FFFFFF;
 }
+
 .page__one .tel {
     font-family: Gilroy, sans-serif;
     font-style: normal;
@@ -103,14 +118,16 @@ a {
     text-transform: uppercase;
     color: #FFFFFF;
 }
-.btn {
-    width: 238px;
-    height: 66px;
+
+.btn1 {
+    width: 230px;
+    height: 60px;
     background: #27D1CE;
     border-radius: 6px;
     border: none;
 }
-.btn a {
+
+.btn1 a {
     font-family: Circe, sans-serif;
     font-style: normal;
     font-weight: 800;
@@ -119,15 +136,19 @@ a {
     letter-spacing: 0.05em;
     text-transform: uppercase;
     color: #FFFFFF;
+    text-decoration: none;
 }
-.logo{
+
+.logo {
     cursor: pointer;
 }
+
 /*----main-------------------------------------------------------------------------*/
 #main {
     background: url("../img/image 17 1.svg") no-repeat;
-    min-height: 60vh;
+    min-height: 70vh;
 }
+
 .flex {
     display: flex;
     /*justify-content: center;*/
@@ -135,6 +156,7 @@ a {
     margin: 150px 0 0 0;
     margin-bottom: 50px;
 }
+
 .php {
     font-family: Gilroy, sans-serif;
     font-style: normal;
@@ -143,6 +165,7 @@ a {
     line-height: 145.5%;
     color: #FFFFFF;
 }
+
 .sit {
     font-family: Gilroy, sans-serif;
     font-style: normal;
@@ -152,6 +175,7 @@ a {
     color: #FFFFFF;
     margin: 0 20px 0 0;
 }
+
 .ho-oli {
     width: 6px;
     height: 6px;
@@ -159,6 +183,7 @@ a {
     background: #FFFFFF;
     margin: 0 20px 0 0;
 }
+
 .ced {
     font-family: RoadRadio, sans-serif;
     font-style: normal;
@@ -332,6 +357,7 @@ a {
 
 #active {
 }
+
 .impulse {
     font-family: RoadRadio, sans-serif;
     font-style: normal;
@@ -341,6 +367,7 @@ a {
     color: #FFFFFF;
     margin: 100px 0 50px 0;
 }
+
 .drive {
     font-family: Gilroy, sans-serif;
     font-style: normal;
@@ -349,22 +376,27 @@ a {
     line-height: 150%;
     color: #8a8787;
 }
+
 .ist {
     color: #FFFFFF;
 }
+
 .ist-one {
     color: #FFFFFF;
     text-decoration-line: underline;
 }
-.nemo{
+
+.nemo {
     text-decoration-line: underline;
 }
-.null-one{
+
+.null-one {
     display: flex;
     align-items: center;
 }
-.poor{
-    font-family: Gilroy ,sans-serif;
+
+.poor {
+    font-family: Gilroy, sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -372,7 +404,8 @@ a {
     text-decoration-line: underline;
     color: #FFFFFF;
 }
-.later{
+
+.later {
     font-family: Gilroy, sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -380,13 +413,15 @@ a {
     line-height: 150%;
     color: #8a8787;
 }
-.pie{
+
+.pie {
     display: flex;
     justify-content: space-between;
     align-items: center;
     /*flex-wrap: wrap;*/
 }
-.from-block{
+
+.from-block {
     opacity: 0.15;
     width: 285px;
     border: 1px solid #FFFFFF;
@@ -394,16 +429,19 @@ a {
     margin-left: -300px;
     position: absolute;
 }
-.sed{
+
+.sed {
     margin-bottom: 26px;
 }
-.sing{
+
+.sing {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.number{
-    font-family: RoadRadio,sans-serif;
+
+.number {
+    font-family: RoadRadio, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 40px;
@@ -414,22 +452,27 @@ a {
     background-clip: text;
     text-fill-color: transparent;
 }
-.number-no{
-    font-family: Gilroy ,sans-serif;
+
+.number-no {
+    font-family: Gilroy, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 150%;
     color: #FFFFFF;
 }
-.mill-block{
+
+.mill-block {
     margin-bottom: 30px;
     margin-top: 20px;
 }
+
 /*----footer-------------------------------------------------------------------------*/
-#details{}
-.detail{
-    font-family: RoadRadio,sans-serif;
+#details {
+}
+
+.detail {
+    font-family: RoadRadio, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 40px;
@@ -439,8 +482,9 @@ a {
     margin-top: 100px;
     margin-bottom: 5px;
 }
-.bone{
-    font-family: Gilroy,sans-serif;
+
+.bone {
+    font-family: Gilroy, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
@@ -448,29 +492,34 @@ a {
     text-align: center;
     color: #FFFFFF;
 }
-.lorem-block{
+
+.lorem-block {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     margin-top: 40px;
 }
-.fa-nimbler{
+
+.fa-nimbler {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.min{
+
+.min {
     width: 50px;
     height: 50px;
     background: #1F232E;
     border-radius: 50%;
 }
-.todo{
+
+.todo {
     margin: 13px 0 0 12.5px;
 }
-.all{
-    font-family: Gilroy,sans-serif;
+
+.all {
+    font-family: Gilroy, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -478,8 +527,9 @@ a {
     color: #FFFFFF;
     margin: 5px;
 }
-.view{
-    font-family: RoadRadio,sans-serif;
+
+.view {
+    font-family: RoadRadio, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 26px;
@@ -487,13 +537,17 @@ a {
     color: #27D1CE;
     /*border: 2px solid #27D1CE;*/
 }
-.jack{
+
+.jack {
     margin-left: 10px;
 }
+
 /*----accordion-------------------------------------------------------------------------*/
-#accordion{}
-.course{
-    font-family: RoadRadio,sans-serif;
+#accordion {
+}
+
+.course {
+    font-family: RoadRadio, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 40px;
@@ -503,11 +557,13 @@ a {
     margin-top: 100px;
     margin-bottom: 50px;
 }
-.faq{
+
+.faq {
     overflow: hidden;
     max-height: 0px;
     transition: all 0.5s ease-in-out;
 }
+
 .faq-title {
     padding-top: 14px;
     padding-left: 20px;
@@ -521,13 +577,14 @@ a {
     border-radius: 6px;
     transition: all 0.3s ease-in-out;
     /*margin-bottom: 20px;*/
-    font-family: Gilroy , sans-serif;
+    font-family: Gilroy, sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
     line-height: 145.5%;
     text-transform: uppercase;
 }
+
 .faq-title:after {
     content: "";
     display: block;
@@ -542,6 +599,7 @@ a {
     transform: translateY(-50%);
     margin: 25px;
 }
+
 .faq-input {
     width: 0;
     height: 0;
@@ -549,20 +607,23 @@ a {
     appearance: none;
     position: absolute;
 }
+
 .faq-input:checked ~ .faq-title:after {
     border-style: solid;
     border-width: 0 5px 8px 5px;
     border-color: transparent transparent #fff transparent;
 }
+
 .faq-input:checked ~ .faq-text {
     max-height: 200px;
 }
+
 .faq-text {
     /*display: none;*/
     overflow: hidden;
     max-height: 0;
     padding: 0 5px;
-    font-family: Gilroy ,sans-serif;
+    font-family: Gilroy, sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 12px;
@@ -572,8 +633,9 @@ a {
     margin-top: 5px;
     transition: all 0.3s ease-in-out;
 }
-.faq-text p{
-    font-family: Gilroy,sans-serif;
+
+.faq-text p {
+    font-family: Gilroy, sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 13px;
@@ -581,8 +643,9 @@ a {
     color: #FFFFFF;
     margin: 10px 0 10px 0;
 }
-.faq-text li{
-    font-family: Gilroy,sans-serif;
+
+.faq-text li {
+    font-family: Gilroy, sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 13px;
@@ -590,25 +653,29 @@ a {
     color: #FFFFFF;
     /*margin: 10px 0 0 0;*/
 }
-.div{
+
+.div {
     width: 3px;
     height: 3px;
     background: #ffffff;
     border-radius: 50%;
     margin: 0 10px 0 5px;
 }
-.li{
+
+.li {
     display: flex;
     align-items: center;
 }
-.flexOne{
+
+.flexOne {
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
 }
-.ores{
-    font-family: Gilroy,sans-serif;
+
+.ores {
+    font-family: Gilroy, sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
@@ -616,9 +683,11 @@ a {
     color: #606678;
     margin-left: 10px;
 }
-.opens-tree{
-   transform: rotate(0);
+
+.opens-tree {
+    transform: rotate(0);
 }
+
 .tool-block {
     width: 310px;
     height: 380px;
@@ -626,6 +695,7 @@ a {
     border-radius: 6px;
     margin-top: 50px;
 }
+
 .questions {
     font-family: RoadRadio, sans-serif;
     font-style: normal;
@@ -637,6 +707,7 @@ a {
     text-transform: uppercase;
     color: #FFFFFF;
 }
+
 .questions__one {
     font-family: RoadRadio, sans-serif;
     font-style: normal;
@@ -649,6 +720,7 @@ a {
     color: #FFFFFF;
     margin-top: 25px;
 }
+
 .your {
     font-family: Gilroy, sans-serif;
     font-style: normal;
@@ -657,12 +729,14 @@ a {
     text-align: center;
     color: #FFFFFF;
 }
+
 .label {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
+
 .input {
     width: 250px;
     height: 65px;
@@ -679,14 +753,17 @@ a {
     text-align: center;
     color: #BCBCBC;
 }
+
 .call {
     margin-bottom: 10px;
 }
+
 .will-onw {
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .will {
     height: 65px;
     width: 250px;
@@ -701,21 +778,26 @@ a {
     border-radius: 10px;
     border: none;
 }
-.allows{
+
+.allows {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
 }
+
 .slider img {
     width: 315px;
 }
+
 .slider {
     margin-left: 15px;
 }
-.classic-one{
+
+.classic-one {
     margin: 25px 0 0 0;
 }
+
 .slider .slick-arrow {
     z-index: 999;
     font-size: 0;
@@ -726,6 +808,7 @@ a {
     border: none;
     position: relative;
 }
+
 .slider .slick-arrow.slick-prev {
     margin-top: 205px;
     margin-left: -65px;
@@ -733,6 +816,7 @@ a {
     z-index: 1;
     position: absolute;
 }
+
 .slider .slick-arrow.slick-prev::after {
     content: url("../img/prev.svg");
     position: absolute;
@@ -741,6 +825,7 @@ a {
     right: 0;
     margin: 11px;
 }
+
 .slider .slick-arrow.slick-next {
     margin-left: 100%;
     margin-top: -249.5px;
@@ -748,6 +833,7 @@ a {
     z-index: 1;
     position: absolute;
 }
+
 .slider .slick-arrow.slick-next::after {
     content: url("../img/next.svg");
     position: absolute;
@@ -756,15 +842,18 @@ a {
     right: 0;
     margin: 11px;
 }
+
 .slider .slick-dots {
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .slider .slick-dots li {
     list-style: none;
     margin: 0 10px;
 }
+
 .slider .slick-dots button {
     font-size: 0;
     width: 10px;
@@ -772,6 +861,7 @@ a {
     border-radius: 50%;
     border: none;
 }
+
 .slider .slick-dots li.slick-active button {
     background-color: transparent;
     border: 1px solid #fff;
@@ -786,11 +876,13 @@ a {
     background: linear-gradient(90deg, #F5318D 0%, #FF5F41 49.27%, #EF9F30 100%);
     margin-top: 131px;
 }
+
 .color {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 .color h6 {
     font-family: RoadRadio, sans-serif;
     font-style: normal;
@@ -801,6 +893,7 @@ a {
     color: #FFFFFF;
     padding: 10px 0 0 0;
 }
+
 .color div {
     color: #FFFFFF;
     padding: 10px 0 0 0;
@@ -809,7 +902,9 @@ a {
 
 /*----footer-------------------------------------------------------------------------*/
 
-#slider{}
+#slider {
+}
+
 .save-big {
     font-family: RoadRadio, sans-serif;
     font-style: normal;
@@ -820,6 +915,7 @@ a {
     color: #FFFFFF;
     margin-top: 100px;
 }
+
 .ad-one {
     font-family: Gilroy, sans-serif;
     font-style: normal;
@@ -835,6 +931,7 @@ a {
     max-height: 40px;
     transition: all 0.2s ease-in-out;
 }
+
 .svg-or {
     display: flex;
     justify-content: center;
@@ -845,14 +942,15 @@ a {
 }
 
 
-
 /*----footer-------------------------------------------------------------------------*/
 
 #footer {
 }
+
 .back--one {
     margin-top: 88px;
 }
+
 .back {
     font-family: RoadRadio, sans-serif;
     font-style: normal;
@@ -862,6 +960,7 @@ a {
     text-align: center;
     color: #FFFFFF;
 }
+
 .eou {
     background: linear-gradient(90deg, #F5318D 0%, #FF5F41 49.27%, #EF9F30 100%);
     -webkit-background-clip: text;
@@ -869,11 +968,13 @@ a {
     background-clip: text;
     text-fill-color: transparent;
 }
+
 .leave {
     width: 90%;
     position: relative;
     margin: 0 20px 20px 0;
 }
+
 .edit {
     position: absolute;
     z-index: 999;
@@ -882,23 +983,28 @@ a {
     margin-top: 80px;
 
 }
+
 .leave-one {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 50px;
 }
+
 .classic {
     display: flex;
     align-items: center;
 }
+
 .line-to {
     display: flex;
     align-items: center;
 }
+
 .one {
     margin: 20px 0 0 0;
 }
+
 .blacks {
     font-family: RoadRadio, sans-serif;
     font-style: normal;
@@ -908,22 +1014,27 @@ a {
     color: #FFFFFF;
     margin-top: 120px;
 }
+
 .fa-telegram {
     font-size: 25px;
     margin: 12px 12px;
 }
+
 .fuse {
     font-size: 23px;
     margin: 13px 14px;
 }
+
 .fa-whatsapp {
     font-size: 25px;
     margin: 12px 14px;
 }
+
 .fa-instagram {
     font-size: 25px;
     margin: 12px 14px;
 }
+
 .fas-one {
     width: 50px;
     height: 50px;
@@ -932,6 +1043,7 @@ a {
     border-radius: 50%;
     margin: 0 10px;
 }
+
 .contact {
 
     font-family: RoadRadio, sans-serif;
@@ -943,11 +1055,13 @@ a {
     margin: 0 10px;
     padding-top: 100px;
 }
+
 .fa-phone {
     color: #FFFFFF;
     font-size: 20px;
     margin: 0 10px;
 }
+
 .tel {
     font-family: Gilroy, sans-serif;
     font-style: normal;
@@ -957,11 +1071,13 @@ a {
     color: #FFFFFF;
     text-decoration: none;
 }
+
 .fa-envelope {
     color: #FFFFFF;
     font-size: 20px;
     margin: 0 10px;
 }
+
 .email {
     font-family: Gilroy, sans-serif;
     font-style: normal;
@@ -971,11 +1087,13 @@ a {
     color: #FFFFFF;
     text-decoration: none;
 }
+
 .fa-location-dot {
     color: #FFFFFF;
     font-size: 20px;
     margin: 0 10px;
 }
+
 .map {
     font-family: Gilroy, sans-serif;
     font-style: normal;
@@ -984,6 +1102,7 @@ a {
     line-height: 27px;
     color: #FFFFFF;
 }
+
 .online {
     font-family: Gilroy, sans-serif;
     font-style: normal;
@@ -993,6 +1112,7 @@ a {
     color: #FFFFFF;
     margin: 0 10px;
 }
+
 .marks {
     display: flex;
     justify-content: space-between;
@@ -1000,6 +1120,7 @@ a {
     flex-wrap: wrap;
     margin-top: 40px;
 }
+
 .once {
     font-family: Gilroy, sans-serif;
     font-style: normal;
@@ -1009,16 +1130,19 @@ a {
     color: #FFFFFF;
     margin-bottom: 10px;
 }
+
 .gle {
     width: 90%;
     margin-bottom: 20px;
 }
+
 .iframe {
     width: 420px;
     height: 279px;
     border-radius: 14px;
     border: none;
 }
+
 .connect {
     width: 100%;
     height: 60px;
@@ -1026,12 +1150,15 @@ a {
     border-radius: 6px;
     margin-top: 100px;
 }
+
 .shock {
     margin: 23px 0 0 0;
 }
+
 .iframes {
     cursor: pointer;
 }
+
 .player {
     display: flex;
     justify-content: center;
@@ -1040,6 +1167,7 @@ a {
     position: absolute;
     margin-left: 457px;
 }
+
 .video {
     position: fixed;
     background-color: rgba(0, 0, 0, 0.4);
@@ -1048,12 +1176,14 @@ a {
     height: 100%;
     display: none;
 }
+
 .yew {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-top: 23px;
 }
+
 .duke {
     font-family: Gilroy, sans-serif;
     font-style: normal;
@@ -1064,6 +1194,7 @@ a {
     opacity: 0.9;
     text-decoration-line: underline;
 }
+
 .worker {
     font-family: Gilroy, sans-serif;
     font-style: normal;
